--- a/css/sass/partials/_styles.scss
+++ b/css/sass/partials/_styles.scss
@@ -260,6 +260,11 @@ $light-grey: #eee;
                 font-size: 1.2rem;
                 font-weight: 400;
                 color: $primary-colour;
+
+                @media (max-width: $media-xs ) {              // EXTRA SMALL BREAKPOINT CHANGE
+                    font-size: 1rem;
+                    font-weight: 700; 
+                }
             }
 
             @media (max-width: 1325px) {              // 1325px CUSTOM BREAKPOINT CHANGE
@@ -341,7 +346,7 @@ $light-grey: #eee;
                 :nth-child(5) {
                     // flex-basis: 95.5%;
                     @include flex($f-basis: 95.5%);
-
+                    font-size: 0.9rem;
                     height: 200px;
                     padding: 15px;
                     margin: 10px;
@@ -633,41 +638,41 @@ button:active {
 }
 */
 
-.close-menu {                   //CLOSE MENU BUTTON FOR MOBILE
-    height: 50px;
-    width: 50px;
+// .close-menu {                   //CLOSE MENU BUTTON FOR MOBILE
+//     height: 50px;
+//     width: 50px;
 
-    padding: 15px;
-    border-radius: 50%;
+//     padding: 15px;
+//     border-radius: 50%;
 
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    z-index: 15;
+//     position: fixed;
+//     right: 20px;
+//     bottom: 20px;
+//     z-index: 15;
 
-    background: $primary-colour;
-    visibility: hidden;
+//     background: $primary-colour;
+//     visibility: hidden;
 
-    @include flexbox;
-    @include justify-content(center);
-    @include align-items(center);
+//     @include flexbox;
+//     @include justify-content(center);
+//     @include align-items(center);
 
-    i  {
-        color: white;
-        font-size: 1.5rem;
-    }
+    // i  {
+    //     color: white;
+    //     font-size: 1.5rem;
+    // }
 
     // @media (max-width: $media-s) {              //  SMALL BREAKPOINT CHANGE
     //     visibility: visible;
     // }
 
-}
+// }
 
-@media (max-width: $media-xs) {              //  SMALL BREAKPOINT CHANGE
-    .side-menu:hover ~ .close-menu {
-    visibility: visible;
-}
-}
+// @media (max-width: $media-xs) {              //  SMALL BREAKPOINT CHANGE
+//     .side-menu:hover ~ .close-menu {
+//     visibility: visible;
+// }
+// }
 
 
 
